<resources>
    <string name="app_name">Photomatic</string>
    <string name="title_home">Home</string>
    <string name="title_rank">Rank</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_more">More</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="hint_register">Create an account</string>
    <string name="notify_please_wait">Please wait...</string>
    <string name="notify_login_fail">Login fail !</string>
    <string name="error_required">Required</string>
    <string name="hint_user_name">Nickname</string>
    <string name="hint_date">Date</string>
    <string name="text_register">Register</string>
    <string name="hint_login">Login</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="error_match_password">Password not match</string>
    <string name="notify_reg_success">Register successfully</string>
    <string name="login_now">LOGIN NOW</string>
    <string name="text_sign_out">Sign out</string>
    <string name="default_name">No name</string>
    <string name="type_newbie">Newbie</string>
    <string name="type_admin">Admin</string>
    <string name="type_official">Official</string>
    <string name="type_active">Active</string>
    <string name="no_information">No information</string>
    <string name="title_information">Information</string>
    <string name="no_value">0</string>
    <string name="text_posts">Posts</string>
    <string name="text_subscribers">Subscribers</string>
    <string name="text_points">Points</string>
    <string name="text_view_your_profile">View your profile</string>
    <string name="text_view_all_photos">View all photos</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_repeat_new_password">Repeat new password</string>
    <string name="text_description">Description</string>
    <string name="text_birthday">Birthday</string>
    <string name="text_address">Address</string>
    <string name="text_sex">Sexual</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_save">Save</string>
    <string name="text_secret">Secret</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="title_confirm_password_dialog">Confirm your current password</string>
    <string name="option_yes">OK</string>
    <string name="option_cancel">Cancel</string>
    <string name="notify_update_success">Update profile successfully</string>
    <string name="notify_confirm_empty">Confirm password is empty</string>
    <string name="title_photo">Photo</string>
    <string name="text_post">Post</string>
    <string name="hint_caption">Caption</string>
    <string-array name="sex_array">
        <item>Secret</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
