<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_rank"
        android:icon="@drawable/ic_rank_black_24dp"
        android:title="@string/title_rank"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_add_photo_black_24dp"
        android:title="@string/title_gallery"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_black_24dp"
        android:title="@string/title_more"
        app:showAsAction="ifRoom" />
</menu>
