<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_20"
    android:layout_marginTop="@dimen/dp_20"
    android:layout_marginEnd="@dimen/dp_20"
    android:background="@drawable/rounded_outline"
    android:paddingTop="@dimen/dp_20"
    android:paddingBottom="@dimen/dp_20">

    <TextView
        android:id="@+id/text_posts_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:textColor="@color/color_primary_dark"
        android:textSize="@dimen/sp_25"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_posts"
        app:layout_constraintEnd_toEndOf="@id/text_posts"
        app:layout_constraintStart_toStartOf="@id/text_posts"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_posts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_subscriber"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_subscriber_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:textColor="@color/color_primary_dark"
        android:textSize="@dimen/sp_25"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_subscriber"
        app:layout_constraintEnd_toEndOf="@id/text_subscriber"
        app:layout_constraintStart_toStartOf="@id/text_subscriber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_subscriber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_subscribers"
        app:layout_constraintBottom_toBottomOf="@id/text_posts"
        app:layout_constraintEnd_toStartOf="@+id/text_point"
        app:layout_constraintStart_toEndOf="@+id/text_posts"
        app:layout_constraintTop_toTopOf="@id/text_posts" />

    <TextView
        android:id="@+id/text_point_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:textColor="@color/color_primary_dark"
        android:textSize="@dimen/sp_25"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_point"
        app:layout_constraintEnd_toEndOf="@id/text_point"
        app:layout_constraintStart_toStartOf="@id/text_point"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_points"
        app:layout_constraintBottom_toBottomOf="@id/text_posts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_subscriber"
        app:layout_constraintTop_toTopOf="@id/text_posts" />
</android.support.constraint.ConstraintLayout>
